clean up, remove butterknife